# OopProjects

./: README.md
SnacksShop/: BaniInsuficienti.h  CMakeLists.txt  corn.cpp  corn.h  main.cpp  monezi.cpp  monezi.h  repo.cpp  repo.h  repofile.cpp  repofile.h  service.cpp  service.h  snacks.cpp  snacks.h  teste.cpp  teste.h  tonomat_repo.cpp  tonomat_repo.h  ui.cpp  ui.h  validator.h  validatordate.h
atm-sd/: CMakeLists.txt  UI.cpp  UI.h  atm.cpp  atm.h  colectie.cpp  colectie.h  main.cpp  pereche.cpp  pereche.h  tranzactie.cpp  tranzactie.h  vectordinamic.cpp  vectordinamic.h
