cmake_minimum_required(VERSION 3.27)
project(lab9_10)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab9_10 main.cpp
        snacks.cpp
        snacks.h
        corn.cpp
        corn.h
        repo.cpp
        repo.h
        tonomat_repo.cpp
        tonomat_repo.h
        monezi.cpp
        monezi.h
        service.cpp
        service.h
        ui.cpp
        ui.h
        teste.cpp
        teste.h
        repofile.h
        repofile.cpp
        validatordate.h
        BaniInsuficienti.h
        validator.h
)
